--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      This app will allow users to create and maintain a collection of playlists.
     </p>
     <div class="buttons">
-      <button class="ui blue button">
+      <button class="ui blue button", onclick="showHide()">
         Read more <i class="arrow circle right icon"></i>
       </button>
       <button class="ui green button">
@@ -34,6 +34,11 @@
       <button class="ui red button">
         Who are you? <i class="user icon"></i>
       </button>
+      <div id="readmore" class="ui message">
+  <p>
+    Over the coming months, we will add CRUD (Create, Read, Update, and Delete) functionality to this app. Users will also be able to create an account, log in, and upload images to the app.
+  </p>  
+</div>
     </div>
         </div>
         <div class="ui column">
@@ -43,6 +48,12 @@
             </div>
             <div class="ui eight wide column">
               <img class="ui small circular image" src="https://cdn.glitch.com/7d6c82ba-1aed-4e57-87c9-8a40b26e3bb7%2FSgt%20Pepper's%20Lonely%20Hearts%20Club%20Band.jpg?v=1611848862691">
+            </div>
+            <div class="ui eight wide column">
+              <img class="ui small circular image" src="https://cdn.glitch.com/7d6c82ba-1aed-4e57-87c9-8a40b26e3bb7%2FHelp!.jpg?v=1611848873143">
+            </div>
+            <div class="ui eight wide column">
+              <img class="ui small circular image" src="https://cdn.glitch.com/7d6c82ba-1aed-4e57-87c9-8a40b26e3bb7%2FA%20Hard%20Day's%20Night.jpg?v=1611848878930">
             </div>
           </div>
        
