📻🏝 Checkpoint ./index.html:27940396/88 ./style.css:27940396/34 ./script.js:27940396/354

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
       <button class="ui green button">
         Like it? <i class="thumbs up icon"></i>
       </button>
-      <button class="ui red button">
+      <button class="ui red button", onclick="welcomeUser()">
         Who are you? <i class="user icon"></i>
       </button>
       <div id="readmore" class="ui message">
+        <div id="welcomeuser" class="ui message"> </div>
   <p>
     Over the coming months, we will add CRUD (Create, Read, Update, and Delete) functionality to this app. Users will also be able to create an account, log in, and upload images to the app.
   </p>  
