😘🚓 Checkpoint ./index.html:27940396/40 ./script.js:27940396/1254

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
      This app will allow users to create and maintain a collection of playlists.
     </p>
     <div class="buttons">
-      <button class="ui blue button", onclick="showHide()">
+      <button class="ui blue button" onclick="showHide()">
         Read more <i class="arrow circle right icon"></i>
       </button>
       <button class="ui green button">
         Like it? <i class="thumbs up icon"></i>
       </button>
-      <button class="ui red button", onclick="welcomeUser()">
+      <button class="ui red button" onclick="welcomeUser()">
         Who are you? <i class="user icon"></i>
       </button>
       <div id="readmore" class="ui message">
