--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         Who are you? <i class="user icon"></i>
       </button>
       <div id="readmore" class="ui message">
-        <div id="welcomeuser" class="ui message"> </div>
+        <div id="welcomeuser" class="ui message" onclick="hideWelcome()"> </div>
   <p>
     Over the coming months, we will add CRUD (Create, Read, Update, and Delete) functionality to this app. Users will also be able to create an account, log in, and upload images to the app.
   </p>  
