🗽😅 Checkpoint ./index.html:27940396/7381

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <button class="ui blue button" onclick="showHide()">
               Read more <i class="arrow circle right icon"></i>
             </button>
-            <button class="ui green button" onclick="alert('Thanks! You\'re okay too')">
+            <button
+              class="ui green button"
+              onclick="alert('Thanks! You\'re okay too')"
+            >
               Like it? <i class="thumbs up icon"></i>
             </button>
             <button class="ui red button" onclick="welcomeUser()">
