🚿🚘 Checkpoint ./dashboard.html:27940396/1628 ./index.html:27940396/248

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
-  <body>
+  <body><nav class="ui menu">
+  <header class="ui header active item">
+    <a href="index.html"> Playlist App</a>               
+  </header>
+  <div class="right menu">
+    <a id="dashboard" class="item" href="dashboard.html"> Dashboard </a>
+  </div>
+</nav>
     <section class="ui container">
       <section class="ui two column grid segment">
         <div class="ui column">
