--- a/dashboard.html
+++ b/dashboard.html
@@ -21,38 +21,7 @@
 
 
     </section>
-    <section class="ui segment">
-
-  <h2 class="ui header">
-    Beethoven Sonatas
-  </h2>
-
-  <table class="ui fixed table">
-    <thead>
-      <tr>
-        <th>Song</th>
-        <th>Artist</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Piano Sonata No. 3</td>
-        <td>Beethoven</td>
-      </tr>
-      <tr>
-        <td>Piano Sonata No. 7</td>
-        <td>Beethoven</td>
-      </tr>
-      <tr>
-        <td>Piano Sonata No. 10</td>
-        <td>Beethoven</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <button class="ui blue button">
-    Rate it! <i class="star icon"></i>
-  </button>
+<section class="ui segment" id="tableoutput">
 
 </section>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
